# rp2040-gpio-to-midi

./: .gitmodules  CMakeLists.txt  README.md  deploy.bat  env.bat
libraries/: CMakeLists.txt
port/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  usb_descriptors.c
src-hello-world/: CMakeLists.txt  main.cpp
